--- a/_posts/2024-10-28-support.md
+++ b/_posts/2024-10-28-support.md
@@ -11,7 +11,7 @@ Welcome to the **SilkScreen** support page! We’re here to help you get the mos
 ## Frequently Asked Questions
 
 ### How do I use SilkScreen?
-**SilkScreen** is an intuitive app that allows you to design dynamic, colorful visuals. Check out the in-app tutorials or our [User Guide](#) for detailed instructions on using different features.
+**SilkScreen** is an intuitive app that allows you to design dynamic, colorful visuals. Check out the in-app tips for more information on using different features.
 
 ### How can I report a bug or request a feature?
 If you encounter any issues or have a suggestion, please send an email to _[Your Contact Email]_. Include as much information as possible so we can resolve the issue quickly.
@@ -30,7 +30,6 @@ We strive to respond to all inquiries within 48 hours.
 ## Additional Resources
 
 - [Privacy Policy](privacy-policy.md)
-- [User Guide](#) (Coming Soon)
 
 ---
 
