update support information about in-app purchses

--- a/_posts/2024-10-28-support.md
+++ b/_posts/2024-10-28-support.md
@@ -14,10 +14,10 @@ Welcome to the **SilkScreen** support page! We’re here to help you get the mos
 **SilkScreen** is an intuitive app that allows you to design dynamic, colorful visuals. Check out the in-app tips for more information on using different features.
 
 ### How can I report a bug or request a feature?
-If you encounter any issues or have a suggestion, please send an email to _[Your Contact Email]_. Include as much information as possible so we can resolve the issue quickly.
+If you encounter any issues or have a suggestion, please send an email to the address below. Include as much information as possible so we can resolve the issue quickly.
 
 ### How do in-app purchases work?
-**SilkScreen** offers non-consumable in-app purchases as a way for users to show their appreciation and support our development. These purchases are like a “Buy me a coffee” gesture, offering three tipping options to give users a choice of what feels right for them. All contributions help us continue to improve the app and build new features. These in-app purchases do not unlock additional features within the app.
+**SilkScreen** uses in-app purchases as a way for users to show their appreciation and support our development. These purchases are donations and they do not unlock additional features within the app, as everyone has access to the full set of features. Donations are a token of gratitude from users who find the app helpful or enjoyable. They provide an opportunity to contribute and support the ongoing improvements and updates to **SilkScreen**. 
 
 ## Contact Us
 
