minor changes to layout

--- a/_posts/2024-10-28-support.md
+++ b/_posts/2024-10-28-support.md
@@ -2,9 +2,9 @@
 layout: post
 title: "Support for SilkScreen"
 categories: support
-date: 2024-10-28
 ---
 
+_Last updated: {{ page.date | date: "%B %d, %Y" }}_
 
 Welcome to the **SilkScreen** support page! We’re here to help you get the most out of our app. Below, you’ll find useful information and resources to assist you.
 
@@ -26,10 +26,6 @@ If you didn’t find the information you were looking for, or if you need furthe
 - **Email**: _silkscreenapp@diprofio.net_
 
 We strive to respond to all inquiries within 48 hours.
-
-## Additional Resources
-
-- [Privacy Policy](privacy-policy.md)
 
 ---
 
